--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -1,3 +1,9 @@
+@import './theme/light.css';
+@import './theme/light-mc.css';
+@import './theme/light-hc.css';
+@import './theme/dark.css';
+@import './theme/dark-mc.css';
+@import './theme/dark-hc.css';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
