--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -1,33 +1,27 @@
+@import './theme/light.css';
+@import './theme/light-mc.css';
+@import './theme/light-hc.css';
+@import './theme/dark.css';
+@import './theme/dark-mc.css';
+@import './theme/dark-hc.css';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+  --display--large: 57px;
+  --display--medium: 45px;
+  --display--small: 36px;
+  --headline--large: 32px;
+  --headline--medium: 28px;
+  --headline--small: 24px;
+  --body--large: 16px;
+  --body--medium: 14px;
+  --body--small: 12px;
+  --label--large: 14px;
+  --label--medium: 12px;
+  --label--small: 11px;
+  --title--large: 22px;
+  --title--medium: 16px;
+  --title--small: 14px;
 }
